# goit-python-web-02-hw

./: README.md  dockerfile.txt  pyproject.toml  requirements.txt  setup.py
Personal_Asistant/: main.py
Personal_Asistant/AdressBook/: AB.py  __init__.py  prompt_tool.py
Personal_Asistant/Game/: game.py
Personal_Asistant/Map/: Map.py  coordinates_admin.txt  coordinates_air.txt  coordinates_nuclear.txt  prompt_tool.py
Personal_Asistant/NoteBook/: NB.py  promp_ut.py
Personal_Asistant/sort/: sort.py
